--- a/src/App.css
+++ b/src/App.css
@@ -206,6 +206,8 @@ h1 {
   /*career component*/
   #career {
     font-size: 1rem;
+    height: 100vh;
+    min-height: 110vh;
   }
 
   /*footer component*/
