--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@ h1 {
   text-transform: capitalize;
   position: sticky;
   padding-top: 2rem;
-  top: -1rem;
+  top: 0;
 }
 .active-nav {
   display: flex;
@@ -36,7 +36,7 @@ h1 {
   text-transform: capitalize;
   position: sticky;
   padding-top: 2rem;
-  top: -1rem;
+  top: 0;
 }
 @media screen and (max-width: 280px) {
   /*Header component*/
@@ -50,25 +50,6 @@ h1 {
     align-items: center;
     height: 16vh;
   }
-  /*About component*/
-  #about {
-    min-height: 100vh;
-  }
-  /*PortFolio component*/
-  #portfolio {
-    height: 65vh;
-    min-height: 110vh;
-  }
-  /*career component*/
-  #career {
-    font-size: 0.6rem;
-    height: 200vh;
-    min-height: 200vh;
-  }
-}
-/*footer component*/
-.footer {
-  text-align: center;
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
@@ -83,81 +64,12 @@ h1 {
     align-items: center;
     height: 22vh;
   }
-  /*introduce component*/
-  #main {
-    font-size: 0;
-    display: flex;
-    margin-left: 0;
-  }
-  /*About component*/
-  #about {
-    height: 130vh;
-    min-height: 140vh;
-  }
-
-  /*PortFolio component*/
-  #portfolio {
-    height: 70vh;
-    min-height: 120vh;
-  }
-  /*career component*/
-  #career {
-    height: 100vh;
-    min-height: 200vh;
-  }
-  #contact {
-    height: 100vh;
-  }
-
-  /*footer component*/
-  .footer {
-    text-align: center;
-  }
-}
-
-@media screen and (min-width: 375px) and (max-width: 378px) {
-  /*About component*/
-  #about {
-    min-height: 90vh;
-  }
-  #career {
-    font-size: 0.5rem;
-  }
-}
-@media screen and (min-width: 411px) and (max-width: 417px) {
-  /*About component*/
-  #about {
-    min-height: 80vh;
-  }
-  #career {
-    font-size: 0.8rem;
-    min-height: 130vh;
-  }
 }
 @media screen and (min-width: 418px) and (max-width: 767px) {
+  /*Header component*/
   .main-nav,
   .active-nav {
     height: 26vh;
-  }
-  /*About component*/
-  #about {
-    height: 170vh;
-    min-height: 90vh;
-  }
-  #about .underline {
-    margin: 0.4rem auto 3.5rem auto;
-  }
-}
-@media screen and (min-width: 540px) and (max-width: 542px) {
-  #career {
-    height: 100vh;
-    min-height: 110vh;
-  }
-}
-@media screen and (min-width: 720px) and (max-width: 721px) {
-  #career {
-    height: 100vh;
-    min-height: 120vh;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 1023px) {
@@ -167,53 +79,6 @@ h1 {
     align-items: center;
     height: 22vh;
   }
-  /*About component*/
-  #about {
-    height: 100vh;
-  }
-  /*PortFolio component*/
-  #portfolio {
-    height: 60vh;
-    min-height: 100vh;
-  }
-  /*career component*/
-  #career {
-    font-size: 1.2rem;
-    height: 224vh;
-  }
-  /*footer component*/
-  .footer {
-    text-align: center;
-  }
-}
-@media screen and (min-width: 767px) and (max-width: 769px) {
-  #career {
-    height: 100vh;
-    min-height: 120vh;
-  }
-}
-@media screen and (min-width: 1024px) and (max-width: 1199px) {
-  /*About component*/
-  #about {
-    height: 80vh;
-  }
-
-  /*PortFolio component*/
-  #portfolio {
-    height: 60vh;
-    min-height: 100vh;
-  }
-  /*career component*/
-  #career {
-    font-size: 1rem;
-    height: 100vh;
-    min-height: 110vh;
-  }
-
-  /*footer component*/
-  .footer {
-    text-align: center;
-  }
 }
 @media screen and (min-width: 1200px) {
   /*Header component*/
@@ -222,95 +87,5 @@ h1 {
   }
   .active-nav {
     height: 12vh;
-  }
-  /*Introduce component*/
-  #main {
-    font-size: 1.6rem;
-  }
-  #main .right .profile-img {
-    display: block;
-    height: 70vh;
-    width: 35vw;
-    margin: 3rem 0 0 1rem;
-  }
-  /*About component*/
-  #about {
-    min-height: 80vh;
-  }
-  /*PortFolio component*/
-  #portfolio {
-    height: 70vh;
-    min-height: 120vh;
-  }
-  /*Contact component*/
-  #contact {
-    height: 100vh;
-  }
-  #career {
-    height: 100vh;
-    min-height: 100vh;
-  }
-}
-@media screen and (max-width: 280px) {
-  /*About component*/
-  #about {
-    min-height: 100vh;
-  }
-}
-@media screen and (max-height: 280px) {
-  /*About component*/
-  #about {
-    height: 170vh;
-  }
-  /*PortFolio component*/
-  #portfolio {
-    height: 100vh;
-    min-height: 180vh;
-  }
-  /*Contact component*/
-  #contact {
-    height: 120vh;
-    margin: 5rem auto;
-  }
-  /*Career component*/
-  #career {
-    height: 120vh;
-    min-height: 240vh;
-  }
-}
-@media screen and (min-height: 319px) and (max-height: 414px) {
-  /*About component*/
-  #about {
-    height: 170vh;
-  }
-  /*PortFolio component*/
-  #portfolio {
-    height: 100vh;
-    min-height: 162vh;
-  }
-  /*Contact component*/
-  #contact {
-    height: 100vh;
-    margin: 5rem auto;
-  }
-  #career {
-    height: 100vh;
-    min-height: 230vh;
-  }
-}
-@media screen and (min-height: 767px) and (max-height: 770px) {
-  /*About component*/
-  #about {
-    min-height: 90vh;
-  }
-  /*career component*/
-  #career {
-    font-size: 1.5rem;
-    height: 100vh;
-    min-height: 120vh;
-  }
-  #portfolio {
-    height: 100vh;
-    min-height: 120vh;
   }
 }
